--- a/Styles/style.css
+++ b/Styles/style.css
@@ -52,10 +52,10 @@ body{
 }
 
 .apresentacao{
-    padding: 5% 15%;
+    padding: 5% 5% 5% 15%;
     display: flex;
     align-items: center;
-    gap: 82px;
+    gap: 200px;
 }
 .apresentacao__conteudo{
     width: 50%;
